# CrunchGoV2

./: CLAUDE.md  docker-compose.yml
.claude/: settings.local.json
backend/: .env  .env.example  MANIFEST.in  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_product_options.py  2026_03_11_1732-79d92d41897d_add_user_model_and_order_relation.py  2026_03_12_1043-ae83f5747aab_add_quick_remarks_to_merchant.py  2026_03_12_1211-b721e9e117e6_add_order_source_and_merchant_operator.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  auth.py  categories.py  merchant.py  orders.py  products.py  upload.py  ws.py
backend/app/core/: __init__.py  pickup_code.py  qiniu.py  security.py  websocket.py
backend/app/models/: __init__.py  base.py  category.py  merchant.py  order.py  order_item_option.py  product.py  product_option.py  user.py
backend/app/schemas/: __init__.py  auth.py  category.py  merchant.py  order.py  product.py  upload.py  user.py
backend/crunchgo_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: run_tests.py  seed.py  seed_test_data.py
backend/tests/: README.md  conftest.py  test_auth.py  test_categories.py  test_integration.py  test_merchant.py  test_orders.py  test_products.py
miniprogram/: README.md  app.js  app.json  app.wxss  project.config.json  project.private.config.json
miniprogram/utils/: api.js  auth.js  util.js
web/: package.json  pnpm-lock.yaml
web/app/: layout.tsx  page.tsx
web/hooks/: useAuth.ts
(+34 files in other folders)
